--- a/major/package.json
+++ b/major/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.0.2",
+    "mdb-react-ui-kit": "^2.1.0",
     "mongodb": "^4.2.1",
     "mongoose": "^6.1.0",
     "mysql2": "^2.3.3",
